# testes

./: CMakeLists.txt  README.md
samples/: pyramid_ascii.stl
src/: Camera.cpp  Camera.h  GLViewport.cpp  GLViewport.h  GridGizmo.cpp  GridGizmo.h  MainWindow.cpp  MainWindow.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  MeshStatistics.h  STLParser.cpp  STLParser.h  main.cpp
